# secret-gitlab-trigger-test

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/secret_gitlab_trigger/: __init__.py
tests/: __init__.py  test_main.py
